[gd_scene load_steps=5 format=2]

[ext_resource path="res://Arkanoid/Platform/Platform.gd" type="Script" id=1]
[ext_resource path="res://textures/Simple Shapes/Square.png" type="Texture" id=2]
[ext_resource path="res://Arkanoid/textures/BrickPixel.png" type="Texture" id=3]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -40, -9 )
b = Vector2( 40, -9 )

[node name="Platform" type="KinematicBody2D"]
position = Vector2( 105, 519 )
collision_layer = 2
collision_mask = 12
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
visible = false
scale = Vector2( 80, 20 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 46.772, 2.623, 1, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="CollisionShape2D"]
scale = Vector2( 7.352, 3.034 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113.301, 100.231, 10.878, 6.97305 )
__meta__ = {
"_edit_lock_": true
}

[node name="ThrowBallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Platform positions" type="Node2D" parent="."]

[node name="PositionL" type="Position2D" parent="Platform positions"]
position = Vector2( -80, -10 )

[node name="PositionR" type="Position2D" parent="Platform positions"]
position = Vector2( 80, -10 )

[node name="PositionM" type="Position2D" parent="Platform positions"]
position = Vector2( 0, -10 )

[connection signal="timeout" from="ThrowBallTimer" to="." method="_on_ThrowBallTimer_timeout"]
